--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0px;
   min-height: 100vh;
@@ -24,20 +23,28 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
-p,h1,h2,h3,h4,img,a{
+p,
+h1,
+h2,
+h3,
+h4,
+img,
+a {
   margin: 0px;
   padding: 0px;
 }
 
-p{
+p {
   font-size: clamp(16px, 4vw, 22px);
 }
 
-h1,h2,h3,h4{
+h1,
+h2,
+h3,
+h4 {
   font-size: clamp(20px, 4vw, 26px);
 }
 
-.svgIcon{
+.svgIcon {
   width: 25px;
 }
