--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -64,9 +64,12 @@ h4 {
 }
 
 .svgIcon {
-  width: 30px;
+  transition: 0.3s ease-in-out;
+  width: 25px;
   cursor: pointer;
-  padding: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 10px;
   background-color: var(--lightgreen);
   border-radius: 5px;
   color: var(--darkgreen);
